fix (?) double scroll bar problem
will have to test on Safari later

--- a/src/frontend/src/components/basic.less
+++ b/src/frontend/src/components/basic.less
@@ -4,8 +4,8 @@
 }
 
 html {
-    overflow-x: hidden;
-    height: 100%;
+    // overflow: hidden;
+    // height: 100%;
 }
 
 body {
